--- a/css/style.css
+++ b/css/style.css
@@ -1,20 +1,82 @@
 body {
-    /*fill in later*/
-}
+    background: url('../images/homepageimage.jpg') no-repeat center center fixed white;
+    background-size: cover;
+    background-color: rgb(26, 26, 28);
 
-.footer {
-    position: fixed;
-    left: 0;
-    bottom: 0;
-    text-align: center;
-    width: 100%;
-    background-color: white;
 }
 
 
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
 
+    to {
+        opacity: 1;
+    }
+}
 
-/*#3F8ABA 
-#A4A6A6
-#2D2E2E
-#EEDDC5*/
+.fade-in-h1 {
+    animation-name: fadeIn;
+    animation: fadeIn 3s;
+}
+
+h1 {
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-weight: bold;
+}
+
+a {
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 100;
+}
+
+.socialmediaiconsize {
+    display: block;
+    margin: 0 auto;
+
+    width: 1.7%
+}
+
+.bgimg-1,
+.bgimg-3 {
+    position: relative;
+    opacity: 0.65;
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 750px;
+
+}
+
+.bgimg-1 {
+    background: red;
+    background-image: url("../images/bgimg1.jpg");
+}
+
+.bgimg-2 {
+    background-color: darkslategray;
+    background-image: url("../images/bgimg2.webp");
+    position: relative;
+    opacity: 0.65;
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 1500px;
+
+}
+
+.bgimg-3 {
+    background-color: yellowgreen;
+    background-image: url("../images/bgimg3.webp");
+}
+
+.smallspace {
+    height: 1000px;
+}
+
+.bigspace {
+    height: 2000px;
+}
