--- a/css/style.css
+++ b/css/style.css
@@ -24,11 +24,26 @@ body {
 h1 {
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-weight: bold;
+    color: white;
 }
 
 a {
     font-family: Arial, Helvetica, sans-serif;
     font-weight: 100;
+}
+
+p {
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    /*font-weight: bold;*/
+    color: white;
+}
+
+
+
+.socialmediaposition {
+    display: block;
+    margin: 50 auto 0;
+    width: 1.7%;
 }
 
 .socialmediaiconsize {
@@ -51,8 +66,9 @@ a {
 }
 
 .bgimg-1 {
-    background: red;
-    background-image: url("../images/bgimg1.jpg");
+    opacity: 1;
+    background-image: url("../images/image1.jpg");
+    height: 900px;
 }
 
 .bgimg-2 {
@@ -70,11 +86,13 @@ a {
 
 .bgimg-3 {
     background-color: yellowgreen;
-    background-image: url("../images/bgimg3.webp");
+    background-image: url("../images/tempimage.webp");
+    opacity: 1;
+    height: 1000px;
 }
 
 .smallspace {
-    height: 1000px;
+    height: 650px;
 }
 
 .bigspace {
