--- a/css/style.css
+++ b/css/style.css
@@ -67,15 +67,14 @@ p {
 
 .bgimg-1 {
     opacity: 1;
-    background-image: url("../images/image1.jpg");
+    background-image: url("../images/bgimg1.jpg");
     height: 900px;
 }
 
 .bgimg-2 {
-    background-color: darkslategray;
-    background-image: url("../images/bgimg2.webp");
+    background-image: url("../images/image1.jpg");
     position: relative;
-    opacity: 0.65;
+    opacity: 1;
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
