--- a/css/style.css
+++ b/css/style.css
@@ -84,7 +84,7 @@ p {
 }
 
 .bgimg-3 {
-    background-image: url("../images/tempimage.webp");
+    background-image: url("../images/image3.jpg");
     opacity: 1;
     height: 1000px;
 }
