--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,8 @@
     animation: fadeIn 3s;
 }
 
-h1 {
+h1,
+h4 {
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-weight: bold;
     color: white;
