--- a/css/style.css
+++ b/css/style.css
@@ -144,9 +144,16 @@ p {
 }
 
 ul {
-    list-style: none;
+    list-style: inside;
     color: white;
+    text-align: center;
 }
+
+.bulletpointfontsize {
+    font-size: 20px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+
 
 a {
     color: white;
@@ -166,6 +173,28 @@ a {
     top: 600px;
     left: 360px;
     font-size: 20px;
+}
+
+.hometext3 {
+    position: absolute;
+    z-index: 1000;
+    top: 400px;
+    left: 415px;
+    font-size: 25px;
+    text-align: left;
+    overflow: hidden;
+    inline-size: 700px;
+}
+
+.hometext4 {
+    position: absolute;
+    z-index: 1000;
+    top: 2500px;
+    left: 515px;
+    font-size: 25px;
+    text-align: left;
+    overflow: hidden;
+    inline-size: 450px;
 }
 
 .bgimg2header {
