--- a/css/style.css
+++ b/css/style.css
@@ -96,7 +96,7 @@ p {
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    height: 1500px;
+    height: 775px;
 
 }
 
@@ -189,19 +189,61 @@ a {
 .hometext4 {
     position: absolute;
     z-index: 1000;
-    top: 2500px;
-    left: 515px;
+    top: 700px;
+    left: 415px;
     font-size: 25px;
     text-align: left;
     overflow: hidden;
-    inline-size: 450px;
+    inline-size: 700px;
+}
+
+.hometext5 {
+    position: absolute;
+    z-index: 1000;
+    top: 800px;
+    left: 415px;
+    font-size: 25px;
+    text-align: left;
+    overflow: hidden;
+    inline-size: 700px;
+}
+
+.hometext6 {
+    position: absolute;
+    z-index: 1000;
+    top: 1800px;
+    left: 100px;
+    font-size: 27px;
+    text-align: left;
+    overflow: hidden;
+    inline-size: 700px;
+}
+
+.hometext7 {
+    position: absolute;
+    z-index: 1000;
+    top: 1800px;
+    left: 800px;
+    font-size: 27px;
+    text-align: left;
+    overflow: hidden;
+    inline-size: 600px;
+
+}
+
+.homeservicelist {
+    color: white;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+
 }
 
 .bgimg2header {
     position: absolute;
     z-index: 1000;
     top: 1600px;
-    left: 650px;
+    left: 350px;
+    inline-size: 900px;
+    font-size: 30px;
 }
 
 /*
@@ -232,7 +274,7 @@ video {
 
 .typewriter p {
     overflow: hidden;
-    border-right: .15em solid orange;
+    border-right: .15em solid white;
     /* Cursor */
     white-space: nowrap;
     /* Keeps text on one line*/
