--- a/css/style.css
+++ b/css/style.css
@@ -84,7 +84,7 @@ p {
 }
 
 .bgimg-1 {
-    background-image: url("../images/bgimg1.jpg");
+    background-image: url("../images/homeimagetest.jpg");
 
 }
 
@@ -101,9 +101,9 @@ p {
 }
 
 .bgimg-3 {
-    background-image: url("../images/seoul.mp4");
+    background-image: url("../images/homeimagetest2.jpg");
     opacity: 1;
-    height: 1000px;
+    height: 1600px;
 
 }
 
@@ -211,7 +211,7 @@ a {
 .hometext6 {
     position: absolute;
     z-index: 1000;
-    top: 1800px;
+    top: 3925px;
     left: 100px;
     font-size: 27px;
     text-align: left;
@@ -222,13 +222,145 @@ a {
 .hometext7 {
     position: absolute;
     z-index: 1000;
-    top: 1800px;
+    top: 3925px;
     left: 800px;
     font-size: 27px;
     text-align: left;
     overflow: hidden;
     inline-size: 600px;
 
+}
+
+.servicesoffer1 {
+    position: absolute;
+    z-index: 1000;
+    top: 800px;
+    left: 415px;
+    font-size: 25px;
+    text-align: left;
+    overflow: hidden;
+    inline-size: 700px;
+}
+
+.servicesoffer1right {
+    position: absolute;
+    z-index: 1000;
+    top: 800px;
+    left: 700px;
+    font-size: 25px;
+    text-align: left;
+    overflow: hidden;
+    inline-size: 700px;
+}
+
+.servicesoffer2 {
+    position: absolute;
+    z-index: 1000;
+    top: 850px;
+    left: 415px;
+    font-size: 25px;
+    text-align: left;
+    overflow: hidden;
+    inline-size: 700px;
+}
+
+.servicesoffer2right {
+    position: absolute;
+    z-index: 1000;
+    top: 850px;
+    left: 700px;
+    font-size: 25px;
+    text-align: left;
+    overflow: hidden;
+    inline-size: 700px;
+}
+
+.servicesoffer3 {
+    position: absolute;
+    z-index: 1000;
+    top: 900px;
+    left: 415px;
+    font-size: 25px;
+    text-align: left;
+    overflow: hidden;
+    inline-size: 700px;
+}
+
+.servicesoffer3right {
+    position: absolute;
+    z-index: 1000;
+    top: 900px;
+    left: 700px;
+    font-size: 25px;
+    text-align: left;
+    overflow: hidden;
+    inline-size: 700px;
+}
+
+.servicesoffer4 {
+    position: absolute;
+    z-index: 1000;
+    top: 950px;
+    left: 415px;
+    font-size: 25px;
+    text-align: left;
+    overflow: hidden;
+    inline-size: 700px;
+}
+
+.servicesoffer4right {
+    position: absolute;
+    z-index: 1000;
+    top: 950px;
+    left: 700px;
+    font-size: 25px;
+    text-align: left;
+    overflow: hidden;
+    inline-size: 700px;
+}
+
+.servicesoffer5 {
+    position: absolute;
+    z-index: 1000;
+    top: 1000px;
+    left: 415px;
+    font-size: 25px;
+    text-align: left;
+    overflow: hidden;
+    inline-size: 700px;
+}
+
+.servicesoffer5right {
+    position: absolute;
+    z-index: 1000;
+    top: 1000px;
+    left: 700px;
+    font-size: 25px;
+    text-align: left;
+    overflow: hidden;
+    inline-size: 700px;
+}
+
+.servicesoffer6 {
+    position: absolute;
+    z-index: 1000;
+    top: 1050px;
+    left: 415px;
+    font-size: 25px;
+    text-align: left;
+    overflow: hidden;
+    inline-size: 700px;
+}
+
+.servicesoffer6right {
+    position: absolute;
+    z-index: 1000;
+    top: 1050px;
+    left: 700px;
+    font-size: 25px;
+    text-align: left;
+    overflow: hidden;
+    inline-size: 700px;
 }
 
 .homeservicelist {
@@ -240,10 +372,10 @@ a {
 .bgimg2header {
     position: absolute;
     z-index: 1000;
-    top: 1600px;
-    left: 350px;
-    inline-size: 900px;
-    font-size: 30px;
+    top: 3700px;
+    left: 290px;
+    inline-size: 1000px;
+    font-size: 32px;
 }
 
 /*
