--- a/css/style.css
+++ b/css/style.css
@@ -245,6 +245,34 @@ a {
 
 }
 
+.bulletpointcontainer {
+    display: grid;
+    grid-template-columns: 38% 38% 24%;
+    /*gap: 10px;
+    padding: 10px;*/
+    grid-template-rows: auto auto auto auto;
+}
+
+.bulletpoint1 {
+    grid-column: 2;
+    grid-row: 1;
+}
+
+.bulletpoint2 {
+    grid-column: 2;
+    grid-row: 2;
+}
+
+.bulletpoint3 {
+    grid-column: 2;
+    grid-row: 3;
+}
+
+.bulletpoint4 {
+    grid-column: 2;
+    grid-row: 4;
+}
+
 .servicesoffer1 {
     position: absolute;
     z-index: 1000;
