--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,6 @@
     from {
         opacity: 0;
     }
-
     to {
         opacity: 1;
     }
@@ -30,8 +29,6 @@ p {
     /*font-weight: bold;*/
     color: white;
 }
-
-
 
 .socialmediaposition {
     display: block;
@@ -66,7 +63,6 @@ p {
 .socialmediaiconsize {
     display: block;
     margin: 0 auto;
-
     width: 1.7%
 }
 
@@ -80,12 +76,10 @@ p {
     background-repeat: no-repeat;
     background-size: cover;
     height: 1500px;
-
 }
 
 .bgimg-1 {
     background-image: url("../images/homeimagetest.jpg");
-
 }
 
 .bgimg-2 {
@@ -97,14 +91,12 @@ p {
     background-repeat: no-repeat;
     background-size: cover;
     height: 775px;
-
 }
 
 .bgimg-3 {
     background-image: url("../images/homeimagetest2.jpg");
     opacity: 1;
     height: 1600px;
-
 }
 
 #background-video {
@@ -119,12 +111,10 @@ p {
     z-index: -1;
 }
 
-
 @keyframes backgroundvideofadein {
     0% {
         opacity: 0;
     }
-
     100% {
         opacity: 1;
     }
@@ -153,7 +143,6 @@ ul {
     font-size: 20px;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
-
 
 a {
     color: white;
@@ -242,7 +231,6 @@ a {
     text-align: left;
     overflow: hidden;
     inline-size: 600px;
-
 }
 
 .bulletpointcontainer {
@@ -408,7 +396,6 @@ a {
 .homeservicelist {
     color: white;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-
 }
 
 .bgimg2header {
@@ -419,6 +406,7 @@ a {
     inline-size: 1000px;
     font-size: 32px;
 }
+
 
 /*
 https://cdn.pixabay.com/vimeo/323496013/Seoul%20-%2021985.mp4?width=1280&expiry=1674241607&hash=267c9e61954a66e665c3788d8ccedf162603550c
@@ -454,35 +442,33 @@ video {
     /* Keeps text on one line*/
     margin: 0 auto;
     letter-spacing: .15em;
-    animation:
-        typing 3.5s steps(40, end),
-        blink-caret .75s step-end infinite;
+    animation: typing 3.5s steps(40, end), blink-caret .75s step-end infinite;
 }
 
+
 /* Typewriter animation */
+
 @keyframes typing {
     from {
         width: 0
     }
-
     to {
         width: 100%
     }
 }
 
-/* cursor animation */
-@keyframes blink-caret {
 
+/* cursor animation */
+
+@keyframes blink-caret {
     from,
     to {
         border-color: transparent
     }
-
     50% {
         border-color: orange;
     }
 }
-
 
 .footer {
     left: 0;
